# tinyORM

./: CMakeLists.txt  LICENSE  README.md
example/: role.h  team.h  test.cpp  user.h  userRole.h
tinyorm/: CMakeLists.txt  bytearray.h  bytearray.hpp  conf.h  conf.hpp  dataloader.h  dataloader.hpp  datatype.h  datatype.hpp  db.h  db.hpp  migrate.hpp  model.h  model.hpp  naming.h  naming.hpp  reflection.h  reflection.hpp
tinyorm/generator/: Makefile  ModelGen.cpp  rules.json
tinyorm/mysql4cpp/: CMakeLists.txt  common.cpp  common.h  connectionpool.cpp  connectionpool.h  database.cpp  database.h  databasemetadata.cpp  databasemetadata.h  preparedresult.cpp  preparedresult.h  result.cpp  result.h  resultset.h  sqlconn.cpp  sqlconn.h  sqlresult.cpp  sqlresult.h  statement.cpp  statement.h  timestamp.cpp  timestamp.h
tinyorm/mysql4cpp/mysql/include/: my_config.h
tinyorm/mysql4cpp/mysql/lib/: libmysql.lib
tinyorm/mysql4cpp/test/: .gdb_history  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  peda-session-test.txt  test.cpp
